--- a/Algebra.tex
+++ b/Algebra.tex
@@ -455,7 +455,11 @@ Per Cauchy esistono $ x, y \in G $ di ordine, rispettivamente, 2 e 3.
 	$ \Leftarrow $. Se vogliamo mandare il ciclo $ (a_1 \; \cdots \; a_k) $ in $ (b_1 \; \cdots \; b_k) $ ci basta coniugare per la stessa permutazione di prima: $ \tau(a_i) = b_i $. Possiamo poi costruire il coniugio moltiplicando tra loro tutte le $ \tau $ relative ai vari cicli.
 \end{proof}
 
-
+\begin{remark}
+	Notiamo che il centralizzatore di $ \sigma $ coincide con lo stabilizzatore dell'azione di coniugio di $ \mathcal{S}_n $ in se. Dunque
+	\[ |Z(\sigma)| = \frac{n!}{|\mathcal{C}(x)|} \]
+\end{remark}
+\textbf{Esercizio.} Trovare $ N(H) $.
 
 \end{multicols}
 
