Corretto un typo

--- a/Algebra.tex
+++ b/Algebra.tex
@@ -105,7 +105,7 @@
 	\[ \Int{G} \cong \faktor{G}{Z(G)} \]
 \end{theorem}
 \begin{proof}
-	La funzione \fun{\Phi}{G}{G}{g}{\varphi_g} è un omomorfismo con kernel $ Z(G) $. La tesi segue dal Primo Teorema di Omomorfismo.
+	La funzione \fun{\Phi}{G}{\Int{G}}{g}{\varphi_g} è un omomorfismo con kernel $ Z(G) $. La tesi segue dal Primo Teorema di Omomorfismo.
 \end{proof}
 
 \begin{remark}
